--- a/frontend/local-media-gallery-frontend/package.json
+++ b/frontend/local-media-gallery-frontend/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "bootstrap": "^5.3.7",
+    "photoswipe": "^5.4.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
