cancel dockerization, use gin single binary

--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-MYSQL_PORT=3306
-MYSQL_PASSWORD=tXokB7ZN3mSK8To
+MYSQL_USERNAME=root
+MYSQL_PASSWORD=123456
 MYSQL_DATABASE=local-media-gallery
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
 
-#APP_MODE=preprocess
-APP_MODE=web_server
-
-MEDIA_HOST_PATH='/Volumes/SD 1TB SSD/localhost'
+MEDIA_HOST_PATH='E:\localhost'
