modify: add example directory for demonstration

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ MYSQL_DATABASE=local-media-gallery
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 
-MEDIA_HOST_PATH='E:\localhost'
+MEDIA_HOST_PATH='example_directory'
