--- a/compose.yaml
+++ b/compose.yaml
@@ -21,6 +21,7 @@ services:
     depends_on:
       - db
     environment:
+      - BACKEND_SERVER_PORT=80
       - DB_HOST=local-media-gallery-mysql
       - DB_PORT=3306
       - DB_USER=root
